main js functionality done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- header section -->
 		<div class="header-container">
 			<div class="main-header">Your <br> To-do's</div>
-			<div class="todo-count">50 <br> To-do's</div>
+			<div class="todo-count">No <br> To do's</div>
 		</div>
 		<!-- todo section -->
 		<div class="todo-main-container">
@@ -29,11 +29,7 @@
 			<div class="inbox-header">INBOX</div>
 
 			<div class="todo-list-container">
-				<div class="list-items-container">
-					<i class="todo-icon fa-solid fa-vial"></i>
-					<div class="todo-description">TEST</div>
-					<i class="fa-solid fa-check todo-done-btn"></i>
-				</div>
+
 			</div>
 		
 		</div>
@@ -55,6 +51,7 @@
 					<button class="fa-solid fa-phone icons"></button>
 				</div>
 				<input class="todo-description inputs" type="text" placeholder="Add To-Do description">
+				<button class="submit-todos-btn">SUBMIT</button>
 			</div>
 		</div>
 
@@ -62,6 +59,9 @@
 
 	<!-- add todo button / is opening a modal -->
 	<i class="add-todo-btn fa-solid fa-plus"></i>
+
+	<!-- storing the class name when user chosing icon -->
+	<div style="display: none;" class="icon-class"></div>
 
  	<script src="app.js"></script> 
  </body> 
